--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     max-width: auto;
     max-height: auto;
     margin: 0 auto;
-    background-image: url(hola.jpg);
+    background-image: url(https://img.freepik.com/foto-gratis/marco-vista-superior-luces-forma-corazon-espacio-copia_23-2148357809.jpg?t=st=1708989466~exp=1708993066~hmac=bdb4d7cc13e078c08efcaee0ac9ca7270346a86cd724f74d71322572c43d777f&w=1480);
     background-repeat: no-repeat; 
     background-position: center; 
      background-size: cover;
