--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div >
             <h1 id="h1">Quieres estar conmigo siempre?</h1>
             <img id="gif1" src="bubu-dudu-heart.gif" alt="GIF animado">
-            <img hidden id="gif2" src="tenor.gif" alt="gif">
+            <img hidden id="gif2" src="http://instagram.com/spongebob" alt="gif">
         <section
         id="botones">
             
